[gd_scene load_steps=28 format=2]

[ext_resource path="res://Ghost/Ghost.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://assets/Ghost Side 01.png" type="Texture" id=3]
[ext_resource path="res://assets/Ghost Side 02.png" type="Texture" id=4]
[ext_resource path="res://assets/Ghost Front 01.png" type="Texture" id=5]
[ext_resource path="res://assets/Ghost Front 02.png" type="Texture" id=6]
[ext_resource path="res://assets/Ghost Back 01.png" type="Texture" id=7]
[ext_resource path="res://assets/Ghost Back 02.png" type="Texture" id=8]
[ext_resource path="res://assets/light_texture.png" type="Texture" id=9]
[ext_resource path="res://assets/Checkpoint sound.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/Pick up edit.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/Ghost death lose sound.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/PressStart2P-Regular.ttf" type="DynamicFontData" id=13]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 24.3963, 30.792 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "Side",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "Down",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "Up",
"speed": 5.0
} ]

[sub_resource type="ParticlesMaterial" id=3]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 20.07
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, -98, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 5.33895e-43
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 40.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 2.0
scale_random = 0.5
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Animation", "Color", "Damping", "Emission Shape", "Flags", "Gravity", "Hue Variation", "Initial Velocity", "Linear Accel", "Radial Accel", "Scale", "Spread", "Tangential Accel", "Trail" ]

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 30.0617, 31.7741 )

[sub_resource type="Gradient" id=5]

offsets = PoolRealArray( 0, 0.266272, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.508876, 0.508876, 0.508876, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=6]

flags = 4
gradient = SubResource( 5 )
width = 2048

[sub_resource type="ParticlesMaterial" id=7]

render_priority = 0
trail_divisor = 1
trail_color_modifier = SubResource( 6 )
emission_shape = 1
emission_sphere_radius = 22.84
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 1.0
flatness = 0.0
gravity = Vector3( 0, -98, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 13.76
radial_accel_random = 0.0
tangential_accel = 42.4
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.28
scale_random = 0.8
color = Color( 1, 0, 0, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Animation", "Color", "Emission Shape", "Gravity", "Hue Variation", "Radial Accel", "Scale", "Spread", "Tangential Accel", "Trail" ]

[sub_resource type="DynamicFont" id=8]

size = 12
use_mipmaps = true
use_filter = true
font_data = ExtResource( 13 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="Animation" id=9]

resource_name = "Level1"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "Home, sweet home.", "" ]
}

[sub_resource type="Animation" id=10]

resource_name = "Level2"
length = 6.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "These pesky investigators again?!", "I've got to make sure my family are okay!", "" ]
}

[sub_resource type="Animation" id=11]

resource_name = "Level3"
length = 6.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "I have to make sure that I have no light absorbed.", "The cameras will be able to see me if I do.", "" ]
}

[sub_resource type="Animation" id=12]

resource_name = "Level4"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "Why can't they just leave us alone?", "" ]
}

[sub_resource type="Animation" id=13]

resource_name = "Level5"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "Nearly there...", "" ]
}

[sub_resource type="Animation" id=14]

resource_name = "Level6"
length = 6.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "They're behind that door.", "They better be okay you dirty breathers!", "" ]
}

[node name="Ghost" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_movement_speed = 200.0

[node name="Sprite" type="Sprite" parent="." index="0"]

visible = false
position = Vector2( 3.05923, -1.62231 )
scale = Vector2( 5.89771, 5.35247 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

visible = false
position = Vector2( 0.0876694, -5.85886 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="2"]

editor/display_folded = true
modulate = Color( 1, 1, 1, 0.470588 )
frames = SubResource( 2 )
animation = "Down"
_sections_unfolded = [ "Visibility" ]

[node name="PoweredUpParticles" type="Particles2D" parent="AnimatedSprite" index="0"]

position = Vector2( -0.772202, -6.51337 )
emitting = false
amount = 14
lifetime = 0.88
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 3 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time" ]

[node name="Light2D" type="Light2D" parent="AnimatedSprite" index="1"]

enabled = true
editor_only = false
texture = ExtResource( 9 )
offset = Vector2( 0, 0 )
texture_scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 0.01
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1
_sections_unfolded = [ "Shadow" ]

[node name="Area2D" type="Area2D" parent="." index="3"]

editor/display_folded = true
visible = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

position = Vector2( 0.59874, -5.98737 )
shape = SubResource( 4 )

[node name="PhaseParticles" type="Particles2D" parent="." index="4"]

emitting = false
amount = 500
lifetime = 1.3
one_shot = true
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 7 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time" ]

[node name="Tween" type="Tween" parent="." index="5"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Timer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="PhaseSound" type="AudioStreamPlayer" parent="." index="7"]

stream = ExtResource( 10 )
volume_db = -10.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="PowerKeySound" type="AudioStreamPlayer" parent="." index="8"]

stream = ExtResource( 11 )
volume_db = -15.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="CapturedSound" type="AudioStreamPlayer" parent="." index="9"]

stream = ExtResource( 12 )
volume_db = -20.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Dialogue" type="Label" parent="." index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -144.0
margin_top = -88.0
margin_right = 145.0
margin_bottom = -46.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 8 )
text = "Home, sweet home."
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Dialogue" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Level1 = SubResource( 9 )
anims/Level2 = SubResource( 10 )
anims/Level3 = SubResource( 11 )
anims/Level4 = SubResource( 12 )
anims/Level5 = SubResource( 13 )
anims/Level6 = SubResource( 14 )
blend_times = [  ]


